bynkc/tests/fixtures/positive/93_record_spread_basic/input.karn
commons demo

type Counter = {
  n: Int,
  name: String,
}

fn inc(c: Counter) -> Counter {
  Counter { ...c, n: c.n + 1 }
}
