bynkc/tests/fixtures/negative/169_malformed_float_trailing/input.karn
commons bad {
  fn f() -> Float {
    1.
  }
}
